# osmcha-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  justfile
frontend/: index.html  main.js  package-lock.json  package.json  style.css
src/: main.rs
