[package]
name = "osmcha-cli"
version = "1.0.0"
description = "View OpenStreetMap augmented diff files on a map in your browser"
authors = ["Jake Low <jake@openstreetmap.us>"]
homepage = "https://github.com/OSMCha/osmcha-cli"
repository = "https://github.com/OSMCha/osmcha-cli"
license = "ISC"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive", "cargo"] }
figment = "0.10.19"
open = "5.3.2"
rocket = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.16.0"
ureq = "3.0.4"

[[bin]]
name = "osmcha"
path = "src/main.rs"
